examples/typechecking/implicit.an
type Box a = x: a

requires_string {s: String} (): Unit = ()
requires_u32 {x: U32} (): Unit = ()
requires_bool {b: Bool} (): Unit = ()
requires_box {b: Box a} (): Unit = ()

zero_matching () =
    requires_string ()

one_matching () =
    implicit hello = "hello"
    requires_string ()

multiple_matching () =
    implicit empty = ""
    implicit spaces = "  "
    implicit greeting = "hi!"
    requires_string ()

one_matching_global () =
    requires_bool ()

multiple_matching_with_global () =
    implicit zero = 0u32
    requires_u32 ()

ambiguous_unknown_type_args () =
    implicit box_i32: Box I32 = Box 1
    implicit box_u32: Box U32 = Box 2
    requires_box ()

implicit false_ = false
implicit one = 1u32

implicit_call () =
    implicit make_string {Bool} = ""
    requires_string ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Box a =
//     x: a
// 
// (requires_string: fn {String} Unit -> Unit) {(s: String)} () : Unit = ()
// 
// (requires_u32: fn {U32} Unit -> Unit) {(x: U32)} () : Unit = ()
// 
// (requires_bool: fn {Bool} Unit -> Unit) {(b: Bool)} () : Unit = ()
// 
// (requires_box: fn {Box a} Unit -> Unit) {(b: Box a)} () : Unit = ()
// 
// (zero_matching: fn Unit -> Unit) () =
//     (requires_string: fn {String} Unit -> Unit) {(error)} ()
// 
// (one_matching: fn Unit -> Unit) () =
//     implicit (hello: String) = "hello"
//     (requires_string: fn {String} Unit -> Unit) {(hello: String)} ()
// 
// (multiple_matching: fn Unit -> Unit) () =
//     implicit (empty: String) = ""
//     implicit (spaces: String) = "  "
//     implicit (greeting: String) = "hi!"
//     (requires_string: fn {String} Unit -> Unit) {(error)} ()
// 
// (one_matching_global: fn Unit -> Unit) () =
//     (requires_bool: fn {Bool} Unit -> Unit) {(false_: Bool)} ()
// 
// (multiple_matching_with_global: fn Unit -> Unit) () =
//     implicit (zero: U32) = 0_U32
//     (requires_u32: fn {U32} Unit -> Unit) {(error)} ()
// 
// (ambiguous_unknown_type_args: fn Unit -> Unit) () =
//     implicit (box_i32: Box I32) = (Box: fn I32 -> Box I32) 1
//     implicit (box_u32: Box U32) = (Box: fn U32 -> Box U32) 2
//     (requires_box: fn {Box _} Unit -> Unit) {(error)} ()
// 
// implicit (false_: Bool) = false
// 
// implicit (one: U32) = 1_U32
// 
// (implicit_call: fn Unit -> Unit) () =
//     implicit (make_string: fn {Bool} -> String) {(_: Bool)} = ""
//     (requires_string: fn {String} Unit -> Unit) {(make_string: fn {Bool} -> String) {(false_: Bool)}} ()

// expected stderr:
// examples/typechecking/implicit.an:9:5
//  8 | zero_matching () =
//    |     // error: No implicit found for type String required by parameter 1 of requires_string
//  9 |     requires_string ()
//    |     ^^^^^^^^^^^^^^^
// 
// examples/typechecking/implicit.an:19:5
// 18 |     implicit greeting = "hi!"
//    |     // error: Multiple matching implicits found for type String required by parameter 1 of requires_string: empty, spaces, greeting
// 19 |     requires_string ()
//    |     ^^^^^^^^^^^^^^^
// 
// examples/typechecking/implicit.an:26:5
// 25 |     implicit zero = 0u32
//    |     // error: Multiple matching implicits found for type U32 required by parameter 1 of requires_u32: zero, one
// 26 |     requires_u32 ()
//    |     ^^^^^^^^^^^^
// 
// examples/typechecking/implicit.an:31:5
// 30 |     implicit box_u32: Box U32 = Box 2
//    |     // error: Ambiguous implicit of type Box _ required by parameter 1 of requires_box, type annotation required
// 31 |     requires_box ()
//    |     ^^^^^^^^^^^^
// 
// Found 4 errors and 0 warnings
